--- a/announce.html
+++ b/announce.html
@@ -2,40 +2,15 @@
 <html lang="en" class="nojs">
 <head>
   <title>The International Society for Universal Dialogue</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta charset="utf-8"/>
-  <meta name="viewport"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" media="screen" href="css/meyersreset-and-normalize-form.css">
   <link rel="stylesheet" media="screen" href="css/style.css">
+  <script src="js/site.js"></script>
 </head>
 <body>
-
   <div class="header">
     <h1>The International Society for Universal Dialogue</h1>
-  </div>
-  <div class="topnav">
-    <a href="index.html">Home</a>
-    <a href="about.html">About Us</a>
-    <a href="announce.html">Announcements and Events</a>
-    <a href="contact.html">Contact</a>
-  </div>
-=======
-
-<main id="content">
-  <img src="/images/ISUD_Logo_color.png" alt="ISUD_Logo">
-  div class="header">
-    <h1>The International Society for Universal Dialogue</h1>
-  </div>
-  <div class="topnav">
-    <a href="index.html">Home Page</a>
-    <a href="about.html">About Us</a>
-    <a href="announce.html">Announcements & Events</a>
-    <a href="contact.html">Contact Us</a>
-  </div>
-
-  <div class="header">
-    <h1>The International Society for Universal Dialogue</h1>
-
   </div>
   <div class="topnav">
     <a href="index.html">Home Page</a>
@@ -47,8 +22,14 @@
     <div class="leftcolumn">
     <div class="card">
     <div class="body">
+      <h2>About Us</h2>
+    </div>
+      <p>Learn more about what we do and how you can make a difference</p>
+    </div>
+    <div class="card">
+    <div class="body">
       <h2>Socials</h2>
-    </div>  
+    </div>
       <a href="https://www.facebook.com/"><img src="images/facebookLogo.png" alt="Facebook" width="60"></a>
       <a href="https://www.linkedin.com/"><img src="images/linkedInLogo.png" alt="LinkedIn" width="60"></a>
       <a href="https://www.instagram.com/"><img src="images/instagramLogo.png" alt="Instagram" width="60"></a>
@@ -58,81 +39,29 @@
     </div>
     <div class="rightcolumn">
       <div class="card">
-      <div class="body">
-        <h1>List of Announcements and Events</h1>
+        <div class="body">
+          <h2>About The International Society for Universal Dialogue</h2>
+        </div>
+        <p>ISUD is a society of scholars, mostly philosophers, from many parts of the world, devoted to promoting international dialogue and the discussion of fundamental questions of universal concern, which affect all humanity, such as world peace, human rights, dialogical interrelations of diverse cultures, and preservation of the world ecology.</p>
+        <ul class="b">
+          <li>What role does philosophical thinking have to play in moving toward a more rational and more humane future?</li>
+          <li>What are ethical principles of dialogue?</li>
+          <li>How may one understand cultural diversity and universality?</li>
+          <li>How best to work toward a culture of peace? What is the relationship between the basic liberties of individuals and the collective rights of cultural groups?</li>
+        </ul>
       </div>
-        <div class="borders">
-          <div class="border2">
-            <div>
-              <a href="https://www.worldialogue.org/2018-congress-how-to-obtain-a-visa"><img src="images/black_white_logo.webp" alt="logo"></a>
-            </div>
-              <a href="https://www.worldialogue.org/2018-congress-how-to-obtain-a-visa"><p>Peru Visa</p></a>
-          </div>
+      <div class="card">
+        <div class="body">
+          <h2>Featured Members</h2>
         </div>
-        <div class="borders">
-          <div class="border2">
-            <div>
-              <a href="https://www.worldialogue.org/d---u-journal"><img src="images/black_white_logo.webp" alt="logo"></a>
-            </div>
-            <a href="https://www.worldialogue.org/d---u-journal"><p>Universalism Journalism</p></a>
-          </div>
-        </div>
-        <div class="borders">
-          <div class="border2">
-            <div>
-              <a href="https://www.worldialogue.org/videos"><img src="images/black_white_logo.webp" alt="logo"></a>
-            </div>
-            <a href="https://www.worldialogue.org/videos"><p>Videographer of ISUD</p></a>
-          </div>
-        </div>
-        <div class="borders">
-          <div class="border2">
-            <div>
-              <a href="https://www.worldialogue.org/past-events"><img src="images/black_white_logo.webp" alt="logo"></a>
-            </div>
-            <a href="https://www.worldialogue.org/past-events"><p>PAST EVENTS</p></a>
-          </div>
-        </div>
-        <div class="borders">
-          <div class="border2">
-            <div>
-              <img src="images/black_white_logo.webp" alt="logo">
-            </div>
-            <p>Event Example</p>
-          </div>
-        </div>
-        <div class="borders">
-          <div class="border2">
-            <div>
-              <img src="images/black_white_logo.webp" alt="logo">
-            </div>
-            <p>Event Example</p>
-          </div>
-        </div>
-        <div class="borders">
-          <div class="border2">
-            <div>
-              <img src="images/black_white_logo.webp" alt="logo">
-            </div>
-            <p>Event Example</p>
-          </div>
-        </div>
-        <div class="borders">
-          <div class="border2">
-            <div>
-              <img src="images/black_white_logo.webp" alt="logo">
-            </div>
-            <p>Event Example</p>
-          </div>
-        </div>
-        <div class="borders">
-          <div class="border2">
-            <div>
-              <img src="images/black_white_logo.webp" alt="logo">
-            </div>
-            <p>Event Example</p>
-          </div>
-        </div>
+        <h3>Pawel Kuczynski: Artistic Videographer of ISUD</h3>
+        <p>Pawel Kuczynski is the director and producer of many documentary and fiction films. He received his PhD from the prestigious Polish Films School in Lodz, Poland.</p>
+        <p>In 1991, Pawel began to systematically document the intellectual and moral ethos of the International Society for Universal Dialogue. His efforts to record the intellectual life of the society have produced a rich library documenting key moments of ISUD World Congresses as well as the deliberations, lectures, and interviews with society members.</p>
+        <p>Through these intellectual and artistic efforts Pawel has established himself as ISUD’s “artistic videographer.” His 2004 film, “Philosopher’s Paradise” focuses on his personal relationship with his father, Janusz Kuczynski, Founder of ISUD.</p>
+        <p>His 2007 film, “Light Denied” blends documentary and fiction film while including a variety of ISUD members—both in personal interviews and as characters interacting with fictitious characters to elucidate the ideas of Frederick Nietzsche.</p>
+        <p>His 2008 film “Phenomenology of Truth” also includes ISUD members. More details concerning Pawel’s work can be found at http://delosfilms.com. Pawel’s works in progress include a film tentatively titled as “Philosophical Friends, The Story of a Dream.” This film depicts the legacy of his father’s relationship with his friend and colleague Jens Jacobsen while re-counting two decades of ISUD efforts to present its vision of a more humane world through the activity of inter-cultural dialogue.</p>
+      </div>
+    </div>
   </div>
 </body>
 </html>
