--- a/announce.html
+++ b/announce.html
@@ -3,8 +3,8 @@
 <head>
   <title>The International Society for Universal Dialogue</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta charset="utf-8"/>
-  <meta name="viewport"/>
+  <meta charset="utf-8">
+  <meta name="viewport">
   <link rel="stylesheet" media="screen" href="css/meyersreset-and-normalize-form.css">
   <link rel="stylesheet" media="screen" href="css/style.css">
 </head>
@@ -36,7 +36,7 @@
       <div class="card">
       <div class="body">
         <h1>List of Announcements and Events</h1>
-      </div>
+       </div>
         <div class="borders">
           <div class="border2">
             <div>
@@ -108,7 +108,7 @@
             </div>
             <p>Event Example</p>
           </div>
-        </div>
-  </div>
+      </div>
+   </div>
 </body>
 </html>
